--- a/src/components/createEvent/createEvent.css
+++ b/src/components/createEvent/createEvent.css
@@ -7,7 +7,7 @@
     border-radius: 8px;
     flex: 6;
   }
-  /* 
+  
   h2 {
     text-align: center;
     margin-bottom: 20px;
@@ -20,15 +20,16 @@
   }
   
   input, textarea {
-    width: 100%;
+    width: 400px;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
+    align-self: center;
   }
   
   textarea {
     resize: none;
-    height: 80px;
+    height: 120px;
   }
   
   .meal-options, .table-section {
@@ -44,14 +45,14 @@
     padding: 0;
   }
   
-  ul li {
+  /* ul li {
     display: flex;
     justify-content: space-between;
     padding: 8px;
     background: #f4f4f4;
     margin-top: 5px;
     border-radius: 5px;
-  }
+  } */
   
   ul li button {
     background: none;
@@ -64,6 +65,7 @@
   .table-input {
     display: flex;
     gap: 10px;
+    width: 500px;
   }
   
   .submit-btn {
@@ -74,6 +76,9 @@
     border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
+    width: 200px;
+    justify-content: center;
+    align-self: center;
   }
   
   .submit-btn:disabled {
@@ -82,7 +87,7 @@
   }
   
   /* Loader Animation */
-  /* .loader {
+  .loader {
     width: 20px;
     height: 20px;
     border: 3px solid white;
@@ -95,4 +100,4 @@
   @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-  }*/ 
+  }
