added more features

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -30,12 +30,13 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 .sidebarListItem.active,
 .sidebarListItem:hover {
-  background-color: rgb(240, 240, 255);
+  background-color: #5669FF;
+  color: whitesmoke;
 }
 
 .sidebarIcon{
