--- a/src/components/qrcodeScanner/qrcode.css
+++ b/src/components/qrcodeScanner/qrcode.css
@@ -2,4 +2,12 @@
     flex: 6;
     padding-left: 15px;
     padding-right: 15px;
+    position: relative;
+}
+
+.cam-scanner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
 }
